--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bususness Idea</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header Section -->
@@ -29,8 +30,29 @@
             with photos and videos to help you engage with us and learn how to succeed in business.</p>       
     </div>
 
+      <div class="alert alert-danger mt-4 mb-4 d-flex small " style="font-size: 15px; font-weight: 500;">
+        <div class="container d-flex border-end">
+            <div>
+                <p class="mb-0 pe-3 me-3 border-end text-center mt-2">
+                    <i class="bi bi-info-circle-fill fs-5 me-2 "></i><br>NOTE
+                </p>
+            </div>
+            <div style="margin-left:3ch;">
+                <p class="mb-0 ">
+                    Every week, we bring you new, tested business ideas to help you stay ahead in the game. Along with step-by-step guides
+                </p>
+                <p class="mb-0 ">
+                    We also improve and add valuable tips and guides to previous ideas, ensuring your business continues to grow.
+                </p>
+                <p class="mb-0 ">
+                    Stay tuned to boost your success with us!"
+                </p>
+            </div>
+        </div>
+      </div>
+
     <div class=" blog-content">        
-        <h3 >1. incense stick ( अगर्बत्ती ) Cost : ₹50,000 - ₹1,00,000 </h3>
+        <h3 >1. Incense stick ( अगर्बत्ती ) Cost : ₹50,000 - ₹1,00,000 </h3>
         <p>We provide step-by-step guidance for businesses of all sizes, from small to large. Our tips come 
             with photos and videos to help you engage with us and learn how to succeed in business.</p>       
     </div>
