--- a/index.html
+++ b/index.html
@@ -53,8 +53,61 @@
 
     <div class=" blog-content">        
         <h3 >1. Incense stick ( अगर्बत्ती ) Cost : ₹50,000 - ₹1,00,000 </h3>
-        <p>We provide step-by-step guidance for businesses of all sizes, from small to large. Our tips come 
-            with photos and videos to help you engage with us and learn how to succeed in business.</p>       
+        <p>Incense stick making is a popular medium-scale business due to its high returns with minimal effort. 
+            With an investment of ₹50,000 to ₹80,000, this business offers a great profit margin. The best part 
+            is that it requires no additional labor costs—one person can manage everything, from production and 
+            packaging to selling. Many companies provide machines for incense stick production and also buy back 
+            the finished product, eliminating the stress of finding buyers. This ensures a good profit range 
+            without any extra expenses!</p>       
+        <P class="f-500">Demand on market :-</P>
+        <p class="m-1ch">Day by day, human needs are evolving, and the demand for incense sticks is steadily increasing. 
+            While they are traditionally used for puja and religious rituals, incense sticks are now widely used 
+            for mosquito repellent, meditation, and enhancing home ambiance. This growing demand across various 
+            sectors ensures a strong market. Additionally, local markets often have low competition, and the 
+            buy-back feature offered by many companies makes it easier to produce and sell products with a good 
+            profit margin.</p>
+        <P class="f-500">Where to sell :-</P>
+        <p class="m-1ch">The selling process for incense sticks is simple and efficient, especially with the buy-back feature. 
+            By purchasing the machine, you can sell the product back to the company, though this typically offers 
+            lower profit margins. For higher profits, consider selling directly in the local market and retail shops. 
+            Retailers can purchase your product at a slightly lower price and sell it to customers at market rates, 
+            ensuring consistent demand and turning them into your regular customers. 
+            Keep in mind that product quality should never be compromised, as this can negatively impact your sales.</p>
+        <P class="f-500"> Margin Calculation :-</P>
+        <p class="m-1ch">Machine Cost: ₹60,000 - ₹80,000</p>
+        <p class="m-1ch">Raw Material Cost: ₹250 (per 10 kg, ₹25 per kg)</p>
+        <p class="m-1ch">Raw Material: ₹100 (1 stick bundle = 3500 pieces)</p>
+        <p class="m-1ch">Labor Cost: ₹400 (for 1 labor)</p>
+        <p class="m-1ch">Production Rate: 1 kg produces 1000 to 1200 incense sticks per day</p>
+        <p class="m-1ch">1 kg produces ~30 packets</p>
+        <p class="m-1ch">1 box contains 12 packets, so 1 kg produces 2.5 boxes</p>
+        <p class="m-1ch">Total Cost: ₹25 (per kg) + ₹40 (sticks) + ₹10 (electricity) + ₹40 (labor) + ₹35 (packing) = ₹150 for 2.5 boxes</p>
+        <p class="m-1ch">Selling Price per Box: ₹100 - ₹10 (coupon) = ₹90. For 2.5 boxes, ₹90 * 2.5 = ₹225</p>
+        <p class="m-1ch">Profit Margin: ₹75 (per kg). For 10 kg, ₹75 * 10 = ₹750</p>
+        <p class="m-1ch">A single person can produce 15 kg per day (machine is automated, and one person can guide the process)</p>
+        <p class="m-1ch">Daily Earnings: ₹1000 - ₹1100</p>
+        <p class="m-1ch">Monthly Earnings (20 days): ₹20,000 (after removing all extra costs)</p>
+        <p class="m-1ch">If a person works dedicatedly, they can produce 20 kg per day, increasing the profit margin.</p>
+        <P class="f-500">Drawbacks :-</P>
+        <p class="m-1ch">While the incense stick business has many advantages, it also comes with a few challenges. 
+            Competing with established brands can be tough, and some retail shops may initially hesitate to 
+            accept your product. However, staying focused on sales and building trust with your quality will 
+            eventually win them over. Remember, maintaining high product quality is essential for earning customer 
+            loyalty and standing out in the market.</p>
+        <P class="f-500">Prescription for Drawbacks :-</P>
+        <p class="m-1ch">To overcome challenges in the incense stick business, always focus on delivering exceptional product quality. 
+            Ensure the fragrance is long-lasting and pleasant, as this greatly impacts customer satisfaction. 
+            Packaging also plays a crucial role in building trust—use strong, attractive, and high-quality packaging. 
+            Remember the saying, <b>'Jo dikhega, wohi bikega' (What looks appealing sells)</b>. Avoid marketing your product 
+            as cheap; instead, keep the pricing competitive with other brands to maintain value perception.
+            For an added edge, include a scratch card inside the box as a special incentive for retailers. This small 
+            gesture not only makes your product more appealing but also encourages repeat purchases, boosting your sales 
+            effectively.</p>
+        <P class="f-500">Conclusion :-</P>
+        <p class="m-1ch">The incense stick business is a promising venture with low investment and high returns. By maintaining product 
+            quality, leveraging market demand, and implementing effective marketing strategies, you can establish a 
+            successful and sustainable business. With dedication and smart planning, this opportunity can bring significant 
+            profits and long-term growth.</p>
     </div>
 
     <div class=" blog-content">        
