--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             profits and long-term growth.</p>
     </div>
 
-    <div class=" blog-content">        
+    <!-- <div class=" blog-content">        
         <h3><i class="bi bi-bookmark-star-fill me-3"></i>&nbsp;&nbsp;Paper Plate Making ( पेपर प्लेट बनाने का व्यवसाय ) Cost : ₹1,00,000 - ₹1,40,000 </h3>
         <p></p>       
         <P class="f-500">Demand on market :-</P>
@@ -187,7 +187,7 @@
 
         <P class="f-500">Conclusion :-</P>
         <p class="m-1ch"></p>      `````````````    
-    </div>
+    </div> -->
 
     <div class=" blog-content">        
         <h3><i class="bi bi-bookmark-star-fill me-3"></i>&nbsp;&nbsp;Edible Tea Cup ( खाने योग्य चाय कप ) Cost : ₹1,50,000 - ₹2,00,000</h3>
