--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Main Content -->
     <div class="container mt-3">   
         <h3 style="font-family: 'Playfair Display', serif; font-weight: 600;">Top Verified and Tested Business Ideas That Can Earn You More Than a Salary .</h3>  
-        <p style="font-family: 'Playfair Display', serif; font-weight: 600; font-style: italic;">"Success in business comes to those who dare to take risks, work hard, and never give up on their dreams. Start today, and watch your vision turn into reality!"</p>   
+        <p style="font-family: 'Playfair Display', serif; font-weight: 600; font-style: italic;  color: #388087;">"Success in business comes to those who dare to take risks, work hard, and never give up on their dreams. Start today, and watch your vision turn into reality!"</p>   
         <p style="margin-left: 2ch; text-align: justify;">In today's world, business is more important than ever. Many people are eager to start their own 
             businesses and run them successfully, but some are unsure of how to begin, where to start, 
             or how to generate income.</p>
@@ -80,9 +80,11 @@
             If you are in a village area, you can register your property on verified websites. Telecom companies will 
             then verify if your property is suitable for installing a tower or hoarding. If approved, they will handle 
             all the setup, and you won’t need to invest any money.<br>            
-            <b>Monthly Rent: ₹20,000 to ₹30,000, and all the income is yours.</b>            
+            <b>Monthly Rent: ₹20,000 to ₹30,000, and all the income is yours.</b><br>
+            <b style="margin-left: 5ch;"><a href="https://www.industowers.com/" target="_blank"> Indus iCare </a>
+                Here you can register your property for tower installation.</b>    
         </p>
-        <b style="margin-left: 5ch;"><a href="https://www.industowers.com/" target="_blank"> Indus iCare </a>Here you can register your property for tower installation.</b>
+        
         
         <P class="f-500">Margin Calculation :- </P>
         <p class="m-1ch">No Margin Calculation, <b>the entire profit is yours.</b></p>
@@ -475,9 +477,8 @@
             may vary by region. Your own thoughts and innovations are essential for improving and adapting 
             them to your business needs.</p>
 
-        <p style="text-align: justify;">Please remember that there is no guarantee of success. This content is exclusively available on 
-            our website, and we do not offer phone support or charge any fees for setup. For any questions 
-            or issues, we suggest referring to the website. The website will not be held responsible for any 
+        <p style="text-align: justify; color: red;">Please remember that there is no guarantee of success. This content is exclusively available on 
+            our website, and we do not offer phone support or charge any fees for setup. The website will not be held responsible for any 
             losses.</p>
     </div>
 
