--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bususness Idea</title>
+    <title>Business Idea</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -14,7 +14,7 @@
         <div class="logo-container">
             <img src="images/Logo busisness.png" alt="logo" class="logo" />
         </div>
-        <h1 class="header-title">busisnessidea.in</h1>
+        <h1 class="header-title">businessidea.in</h1>
     </header>
     
 
