--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         </div>
       </div>
 
+    <div class=" container">
+      <input id="searchField" type="text" class="form-control" placeholder="Search Here..." oninput="searchBlogs()">
+    </div>
+
     <div class=" blog-content">        
         <h3><i class="bi bi-bookmark-star-fill me-3"></i>Rent Out Your Terrace ( अपनी छत किराए पर दें ) Cost : ₹0 </h3>
         <p>Renting Out Your Terrace: A Popular and Easy Way to Earn!</p>
@@ -167,29 +171,6 @@
             successful and sustainable business. With dedication and smart planning, this opportunity can bring significant 
             profits and long-term growth.</p>
     </div>
-
-    <!-- <div class=" blog-content">        
-        <h3><i class="bi bi-bookmark-star-fill me-3"></i>Paper Plate Making ( पेपर प्लेट बनाने का व्यवसाय ) Cost : ₹1,00,000 - ₹1,40,000 </h3>
-        <p></p>       
-        <P class="f-500">Demand on market :-</P>
-        <p class="m-1ch"></p>
-
-        <P class="f-500">Where to sell :-</P>
-        <p class="m-1ch"></p>
-        
-        <P class="f-500">Margin Calculation :-</P>
-        <p class="m-1ch"></p>
-        <p class="m-1ch" style="color: red;"><strong>Note:</strong> Calculations may vary based on location and demand. Before proceeding, please verify with your local market to ensure accuracy and feasibility.</p>
-        
-        <P class="f-500">Drawbacks :-</P>
-        <p class="m-1ch"></p>
-
-        <P class="f-500">Prescription for Drawbacks :-</P>
-        <p class="m-1ch"></p>
-
-        <P class="f-500">Conclusion :-</P>
-        <p class="m-1ch"></p>      `````````````    
-    </div> -->
 
     <div class=" blog-content">        
         <h3><i class="bi bi-bookmark-star-fill me-3"></i>Edible Tea Cup ( खाने योग्य चाय कप ) Cost : ₹1,50,000 - ₹2,00,000</h3>
